LJSUP-4438: banner misplace in IE fixed LJSUP-4427: another visible line removed
git-svn-id: http://code.livejournal.org/svn/livejournal/trunk@15272 1dfba125-df10-0410-8a77-af1a8d6d074f

--- a/htdocs/stc/ad_base.css
+++ b/htdocs/stc/ad_base.css
@@ -45,9 +45,12 @@
     display: none;
 }
 
+.ljadafter-post-a IMG {
+    vertical-align:top;
+}
 .ljadafter-post-a DL DD A IMG {
-	margin:0;
-	}
+    margin:0;
+}
 
 
 .ljad5linkunit
